
2006-06-02  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fix bug #3612: no c-prefix for URL fragment in menus (section index)
	* Fix bug #2493: TCE-forms don't skins icons / t3skin lacks undo.gif, csv.gif and savedoknew.gif (thanks to Clemens Riccabona for the latter)

2006-05-31  Ernesto Baschny <ernst@cron-it.de>

	* Fix bug #3522: Linking images to hidden pages results in click-enlarge

2006-05-31 Bernhard Kraft  <kraftb@kraftb.at>

	* Fix a problem of the EM: "No file uploaded!" when retrying install after a failed dependency check

2006-05-22  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Corrected error message for config.baseURL=1

2006-05-20  Ernesto Baschny <ernst@cron-it.de>

	* Fixed bug #2874: Current page in navigation tree wasn't being highlighted on IE6

2006-05-20   Rupert Germann  <rupi@gmx.li>

	* Fixed bug #2566: XClass include code was missing in wsol_preview.php.

2006-05-18   Rupert Germann  <rupi@gmx.li>

	* Fixed bug #0132: % signs in extra parameters of form contentelements where not handled correctly.

2006-05-18  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #3138: Alignment of text in css_styled_content's Text w/ images (nowrap) was wrong (Firefox)

2006-05-15  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #1374: Mailforms didn't work with <input type="image"> submit buttons. (Thanks to Thorsten Kahler and Rupert Germann!)	
	* Changed square brackets "[" and "]" in URLs generated by media/scipts/fe_adminLib.inc to the urlencoded equivalents "%5B" and "%5D"

2006-05-15  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fix bug #3364: Changed t3lib_div::validPathStr() that it rejects files starting with ../ or containing /../, but allows ..
	* Corrected comment for maxWInText (tslib_content) and simplified calculation
	* Fix bug #338: Sanitize path normalization of class.t3lib_userauthgroup.php::addFileMount()

2006-05-05  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
